fix(hero): adjust spacing

--- a/homepage.css
+++ b/homepage.css
@@ -276,9 +276,6 @@ p {
   .collab-content {
     top: 32% !important;
   }
-  .hero {
-    margin-top: 5rem !important;
-  }
   .about-detail {
     margin-top: 2rem;
   }
@@ -359,7 +356,7 @@ p {
     font-size: 10px;
   }
   .hero {
-    padding: 2rem 0;
+    padding: 3rem 0;
   }
   .flex-row {
     justify-content: center;
